Perbaharui link menu dan tombol peta

--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
                                         <li> <a href="#">HOME<br></a> </li>
                                         <li> <a href="#">PROFIL<br></a> </li>
                                         <li> <a href="#">PROGRAM<br></a> </li>
-                                        <li> <a href="#">KARYA<br></a> </li>
-                                        <li> <a href="#">PEMBANGUNAN<br></a> </li>
-                                        <li> <a href="#">DONASI<br></a> </li>
+                                        <li> <a href="#">PRODUK<br></a> </li>
+                                        <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
+                                        <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
+                                        <li> <a href="#">BLOG<br></a> </li>
                                         <li> <a href="#">KONTAK<br></a> </li>
                                     </ul>
                                 </div>
@@ -106,7 +107,7 @@
                                 <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
                                 <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
                                 <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
-							Pendaftaran Santri</span> </a> <a class="btn btn--primary-1 type--uppercase" href="#customise-template"> <span class="btn__text">
+							Pendaftaran Santri</span> </a> <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren" target="_blank"> <span class="btn__text">
                             Donasi & Dukungan</span> </a> <span class="block type--fine-print">atau <a href="index.html">lihat program pesantren</a></span> </div>
                         </div>
                         <!--<div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="assets/img/device-2.png"> </div>-->
@@ -216,8 +217,8 @@
             </section>
             <section class="text-center bg--secondary">
                 <div class="container">
-                    <h2 class="type--bold mb-3">Karya Madrasah Digital</h2>
-                    <p class="lead mb-5"> Karya-karya yang telah diciptakan dalam program Madrasah Digital </p>
+                    <h2 class="type--bold mb-3">Produk Madrasah Digital</h2>
+                    <p class="lead mb-5"> Produk-produk yang telah membantu kami menciptakan pesantren gratis untuk para penghafal Al-Qur'an </p>
 
                     <div class="row justify-content-center">
                         <div class="col-md-4">
@@ -276,12 +277,12 @@
                     <p class="lead mb-5">Kami telah berkolaborasi dengan berbagai pihak untuk saling menguatkan</p>
 
                     <div class="kampus-wrapper text-center">
-                        <a href="https://www.codepolitan.com/" target="_blank"><img alt="Partner Madrasah Digital - Codepolitan" class="d-inline-block mx-5 mb-4" src="assets/images/logo-codepolitan.png"></a>
-                        <a href="https://persis.or.id/" target="_blank"><img alt="Partner Madrasah Digital - Pemuda Persatuan Islam" class="d-inline-block mx-5 mb-4" src="assets/images/logo-pemudapersis.png"></a>
-                        <a href="https://www.instagram.com/pecinta_quran/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block mx-5 mb-4" src="assets/images/logo-pecintaquran.png"></a>
+                        <a href="https://www.codepolitan.com/" target="_blank"><img alt="Partner Madrasah Digital - Codepolitan" class="d-inline-block mx-5 mb-5" src="assets/images/logo-codepolitan.png"></a>
+                        <a href="https://persis.or.id/" target="_blank"><img alt="Partner Madrasah Digital - Pemuda Persatuan Islam" class="d-inline-block mx-5 mb-5" src="assets/images/logo-pemudapersis.png"></a>
+                        <a href="https://www.instagram.com/pecinta_quran/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block mx-5 mb-5" src="assets/images/logo-pecintaquran.png"></a>
                     </div>
 
-                    <a class="btn type--uppercase mt-5" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung Sebagai Mitra</span></a>
+                    <a class="btn mt-4" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung Sebagai Mitra</span></a>
                 </div>
             </section>
             <section class="switchable switchable--switch bg--secondary">
@@ -293,8 +294,12 @@
                         <div class="col-lg-5 col-md-5">
                             <div class="switchable__text">
                                 <h3 class="type--bold">Alamat Madrasah Digital</h3>
-                                <p class="lead"> Kp. Gaga RT. 001 RW. 002, Desa Sukamantri, Kecamatan Tambelang, Kabupaten Bekasi, Jawa Barat, Indonesia </p>
+
                                 <p class="lead"> E: <a href="#">info@madrasahdigital.id</a><br> P: +62 8999 129 220 </p>
+
+                                <p class="lead"> Kp. Gaga RT. 001 RW. 002, Desa Sukamantri, Kecamatan Tambelang, Kabupaten Bekasi, Jawa Barat, Indonesia </p>
+
+                                <a class="btn" href="https://www.google.com/maps/place/Madrasah+Digital/@-6.142802,107.161223,16z/data=!4m5!3m4!1s0x0:0x56a4c09f018b6e35!8m2!3d-6.1428022!4d107.1612232?hl=en" target="_blank"><span class="btn__text">Lihat di peta</span></a>
                             </div>
                         </div>
                     </div>
