--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
 
                     <div class="row justify-content-center">
                         <div class="col-md-4">
-                            <div class="feature feature-1"> <img alt="Image" src="assets/img/cowork-1.jpg">
+                            <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-67benda.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
                                     <h3>67Benda</h3>
-                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a class="btn" href="#">
+                                    <p class="lead"> Aplikasi Android pemantau aktivitas santri Pesantren Persatuan Islam 67 Benda </p> <a class="btn" href="https://play.google.com/store/apps/details?id=com.madrasahdigital.walisantri.ppi67benda" target="_blank">
                                     <span class="btn__text">Lihat detail</span>
                                 </a> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="feature feature-1"> <img alt="Image" src="assets/img/landing-1.jpg">
+                            <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-67benda.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
                                     <h3>Dirosah</h3>
                                     <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a class="btn" href="#">
