Perbaharui meta desc

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <meta property="og:locale" content="id_ID">
         <meta property="og:type" content="article">
         <meta property="og:title" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital">
-        <meta property="og:description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta property="og:description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
         <meta property="og:url" content="">
         <meta property="og:site_name" content="https://www.madrasahdigital.id/">
         <meta property="article:publisher" content="https://www.facebook.com/madrasahdigital.id/">
@@ -35,8 +35,8 @@
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="627">
 
-        <meta name="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
-        <meta property="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta name="description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
+        <meta property="description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
         <meta property="language" content="Indonesia">
         <meta property="revisit-after" content="7">
         <meta property="rating" content="general">
