--- a/index.html
+++ b/index.html
@@ -277,9 +277,10 @@
                     <p class="lead mb-5">Kami telah berkolaborasi dengan berbagai pihak untuk saling menguatkan</p>
 
                     <div class="kampus-wrapper text-center">
-                        <a href="https://www.codepolitan.com/" target="_blank"><img alt="Partner Madrasah Digital - Codepolitan" class="d-inline-block mx-5 mb-5" src="assets/images/logo-codepolitan.png"></a>
-                        <a href="https://persis.or.id/" target="_blank"><img alt="Partner Madrasah Digital - Pemuda Persatuan Islam" class="d-inline-block mx-5 mb-5" src="assets/images/logo-pemudapersis.png"></a>
-                        <a href="https://www.instagram.com/pecinta_quran/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block mx-5 mb-5" src="assets/images/logo-pecintaquran.png"></a>
+                        <a href="https://www.codepolitan.com/" target="_blank"><img alt="Partner Madrasah Digital - Codepolitan" class="d-inline-block mx-5 logo-partner mb-5" src="assets/images/logo-codepolitan.png"></a>
+                        <a href="https://persis.or.id/" target="_blank"><img alt="Partner Madrasah Digital - Pemuda Persatuan Islam" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-pemudapersis.png"></a>
+                        <a href="https://www.instagram.com/pecinta_quran/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-pecintaquran.png"></a>
+                        <a href="https://www.persis67benda.com/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-benda.png"></a>
                     </div>
 
                     <a class="btn mt-4" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung Sebagai Mitra</span></a>
