--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
             </section>
             <section class="switchable switchable--switch imagebg height-50 parallax" data-overlay="2">
-                <div class="background-image-holder"><img alt="background" src="assets/img/inner-8.jpg"></div>
+                <div class="background-image-holder"><img alt="background" src="assets/images/bg-pesantren-sawah.jpg"></div>
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-md-6">
