--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
                                 <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
                                 <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
                                 <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
-							Pendaftaran Santri</span> </a> <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren" target="_blank"> <span class="btn__text">
-                            Donasi & Dukungan</span> </a> <span class="block type--fine-print">atau <a href="index.html">lihat program pesantren</a></span> </div>
+							Pendaftaran Santri</span> </a> 
+                                <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren"> <span class="btn__text">
+                            Donasi & Dukungan</span> </a>  
+                                <span class="block type--fine-print">atau <a href="index.html">lihat program pesantren</a></span>
+                            </div>
                         </div>
                         <!--<div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="assets/img/device-2.png"> </div>-->
                     </div>
@@ -122,7 +125,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2 class="type--bold"><span class="text--color-madrasah-yellow">Siang</span> Belajar IT dan Bisnis</h2>
-                            <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. Elements have been designed to showcase content in a diverse yet consistent manner. </p>
+                            <p class="lead"> Pada siang hari, para santri akan belajar kewirausahaan dan keahlian-keahlian teknis dalam bidang IT. Pembekalan keahlian ini untuk mempersiapkan para santri agar kompeten dan bisa bersaing dalam dunia industri 4.0 setelah selesai mengikuti program pesantren.</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +138,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2 class="type--bold"><span class="text--color-madrasah-yellow">Malam</span> Belajar Agama dan Menghafal Al-Qur’an</h2>
-                            <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. Elements have been designed to showcase content in a diverse yet consistent manner. </p>
+                            <p class="lead"> Pada malam hari, para santri akan fokus dalam mempelajari ilmu agama, tadarus dan menghafal Al-Qur'an. Para santri ditargetkan memiliki hafalan minimal 5 juz setelah menyelesaikan program pesantren.</p>
                         </div>
                     </div>
                 </div>
