--- a/index.html
+++ b/index.html
@@ -146,46 +146,46 @@
             <section class="text-center">
                 <div class="container">
                     <h2 class="type--bold mb-3">Program Madrasah Digital</h2>
-                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
+                    <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital<br />untuk membentuk mental dan habit para santri</p>
 
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
-                                <h4>Gratis</h4>
+                                <h4>Tahajud Berjamaah</h4>
                                 <p> for marketing campaigns </p>
                             </div>
                             <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
-                                <h4>Mailer Integrations</h4>
+                                <h4>Kuliah Shubuh</h4>
                                 <p> for marketing campaigns </p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Air-Balloon color--dark"></i>
-                                <h4>Diverse Icons</h4>
+                                <h4>Olahraga Pagi</h4>
                                 <p> from a library over over 1,000 </p>
                             </div>
                             <div class="text-block"> <i class="icon icon--lg icon-Air-Balloon color--dark"></i>
-                                <h4>Diverse Icons</h4>
+                                <h4>Sholat Dhuha</h4>
                                 <p> from a library over over 1,000 </p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Bacteria color--dark"></i>
-                                <h4>Modular Design</h4>
+                                <h4>Dzikir Pagi-Petang</h4>
                                 <p> for maximum flexibility </p>
                             </div>
                             <div class="text-block"> <i class="icon icon--lg icon-Bacteria color--dark"></i>
-                                <h4>Modular Design</h4>
+                                <h4>Shaum Senin-Kamis</h4>
                                 <p> for maximum flexibility </p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Fingerprint-2 color--dark"></i>
-                                <h4>Modular Design</h4>
+                                <h4>Shalat Berjamaah 5 Waktu</h4>
                                 <p> for maximum flexibility </p>
                             </div>
                             <div class="text-block"> <i class="icon icon--lg icon-Fingerprint-2 color--dark"></i>
-                                <h4>Modular Design</h4>
+                                <h4>Tadarus Ba'da Maghrib</h4>
                                 <p> for maximum flexibility </p>
                             </div>
                         </div>
