Update produk DIrosah

--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
             <section class="text-center">
                 <div class="container">
                     <h2 class="type--bold mb-3">Program Madrasah Digital</h2>
-                    <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital<br />untuk membentuk mental dan habit para santri</p>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6">
+                            <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
+                        </div>
+                    </div>
 
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -227,18 +231,18 @@
                         <div class="col-md-4">
                             <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-67benda.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3>67Benda</h3>
+                                    <h3 class="type--bold">67Benda</h3>
                                     <p class="lead"> Aplikasi Android pemantau aktivitas santri Pesantren Persatuan Islam 67 Benda </p> <a class="btn" href="https://play.google.com/store/apps/details?id=com.madrasahdigital.walisantri.ppi67benda" target="_blank">
                                     <span class="btn__text">Lihat detail</span>
                                 </a> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-67benda.jpg">
+                            <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-dirosah.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3>Dirosah</h3>
-                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a class="btn" href="#">
-                                    <span class="btn__text">Lihat detail</span>
+                                    <h3 class="type--bold">Dirosah</h3>
+                                    <p class="lead"> Coming Soom </p> <!--<a class="btn" href="#">
+                                    <span class="btn__text">Lihat detail</span>-->
                                 </a> </div>
                             </div>
                         </div>
