Ganti warna title

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </section>
             <section class="text-center">
                 <div class="container">
-                    <h2 class="type--bold mb-3">Program Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Madrasah Digital</h2>
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
@@ -202,7 +202,7 @@
                         <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/madrasah-digital-view.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text mt-0">
-                                <h2 class="type--bold">Apa itu Madrasah Digital?</h2>
+                                <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
                                 <p class="lead"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri. </p> 
                                 <a class="btn" href="#">
                                     <span class="btn__text">Selengkapnya</span>
@@ -216,7 +216,7 @@
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>Design-driven and perfect for modern startups</h2>
+                            <h2 class="type--bold">Design-driven and perfect for modern startups</h2>
                             <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. </p>
                         </div>
                     </div>
@@ -224,14 +224,14 @@
             </section>
             <section class="text-center bg--secondary">
                 <div class="container">
-                    <h2 class="type--bold mb-3">Produk Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Madrasah Digital</h2>
                     <p class="lead mb-5"> Produk-produk yang telah membantu kami menciptakan pesantren gratis untuk para penghafal Al-Qur'an </p>
 
                     <div class="row justify-content-center">
                         <div class="col-md-4">
                             <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-67benda.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3 class="type--bold">67Benda</h3>
+                                    <h3 class="type--bold text--color-madrasah-dark">67Benda</h3>
                                     <p class="lead"> Aplikasi Android pemantau aktivitas santri Pesantren Persatuan Islam 67 Benda </p> <a class="btn" href="https://play.google.com/store/apps/details?id=com.madrasahdigital.walisantri.ppi67benda" target="_blank">
                                     <span class="btn__text">Lihat detail</span>
                                 </a> </div>
@@ -240,7 +240,7 @@
                         <div class="col-md-4">
                             <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-dirosah.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3 class="type--bold">Dirosah</h3>
+                                    <h3 class="type--bold text--color-madrasah-dark">Dirosah</h3>
                                     <p class="lead"> Coming Soom </p> <!--<a class="btn" href="#">
                                     <span class="btn__text">Lihat detail</span>-->
                                 </a> </div>
@@ -251,7 +251,7 @@
             </section>
             <section class="text-center">
                 <div class="container">
-                    <h2 class="type--bold mb-3">Kata Mereka tentang Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Kata Mereka tentang Madrasah Digital</h2>
                     <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
 
                     <div class="row">
@@ -268,7 +268,7 @@
                         <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/dokumentasi-pembangunan-pesantren-with-logo.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2 class="type--bold">Dokumentasi Lengkap Pembangunan Pesantren</h2>
+                                <h2 class="type--bold text--color-madrasah-dark">Dokumentasi Lengkap Pembangunan Pesantren</h2>
                                 <p class="lead"> Sekecil apapun proses pembangunan pesantren selalu kami dokumentasikan untuk memberikan transparansi penggunaan dana yang telah dititipkan oleh para donatur. </p> 
                                 <a class="btn" href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">
                                     <span class="btn__text">Lihat dokumentasi lengkap</span>
@@ -280,7 +280,7 @@
             </section>
             <section class="space--sm text-center">
                 <div class="container">
-                    <h2 class="type--bold mb-3">Mitra Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Mitra Madrasah Digital</h2>
                     <p class="lead mb-5">Kami telah berkolaborasi dengan berbagai pihak untuk saling menguatkan</p>
 
                     <div class="kampus-wrapper text-center">
@@ -301,7 +301,7 @@
                         </div>
                         <div class="col-lg-5 col-md-5">
                             <div class="switchable__text">
-                                <h3 class="type--bold">Alamat Madrasah Digital</h3>
+                                <h3 class="type--bold text--color-madrasah-dark">Alamat Madrasah Digital</h3>
 
                                 <p class="lead"> E: <a href="#">info@madrasahdigital.id</a><br> P: +62 8999 129 220 </p>
 
